--- a/lab6/src/app/about/about.component.html
+++ b/lab6/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div onclick="doRed()" class="container">
 	<h1>О нас</h1>
 	<div class="row">
 		<div class="col-md-6">
@@ -49,3 +49,4 @@
 Мы дорожим своей репутацией, и поэтому сознательно не продаём неофициальный или нелегальный товар без гарантии и сервисной поддержки в Украине. В конечном итоге покупка продуктов сомнительного происхождения доставляет головную боль и для продавца, и для покупателя.
 </p>
 </div>
+$("body").css("background-color", "green");
